# GrepUtilityTask

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
cmake/: CompilerWarnings.cmake  GoogleTests.cmake
scripts/: build.sh  clean.sh  run.sh
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test_main.cpp
test/ut_dir/binary/: g++
test/ut_dir/recursive/: file1.txt
test/ut_dir/recursive/dir_1/: file1.txt
test/ut_dir/recursive/dir_1/dir_1_1/: file_1_1.txt
test/ut_dir/recursive/dir_1/dir_1_2/: file_1_2.txt
test/ut_dir/recursive/dir_2/dir_2_1/dir_2_1_1/: file_2_1_1.txt
test/ut_dir/recursive/dir_3/: file3.txt
test/ut_dir/simple/: file2.txt  file3.txt
